# strands-agentcore-sample-code

./: .bedrock_agentcore.yaml  01_hello_agent.py  02_tools_and_functions.py  03_document_processing.py  04_fastapi_chatbot.py  05_file_upload.py  06_multi_agent.py  07_streaming.py  08_console_chat.py  09_memory_context.py  10_local_knowledgebase.py  11_bedrock_knowledgebase.py  12_rag_pipeline.py  13_database_agent.py  14_external_apis.py  15_mcp_integration.py  16_slack_bot.py  17_image_analysis.py  18_voice_agent.py  19_code_execution.py  20_conversation_manager.py  21_custom_models.py  22_ollama_models.py  Dockerfile  PRESENTATION_SCRIPT.md  README.md  agentcore_deployment.py  demo_1_hello_agent.py  demo_2_tools_and_functions.py  demo_3_mcp_integration.py  demo_4_multi_agent.py  demo_5_agentcore_deployment.py  demo_6_streaming.py  deploy.sh  ecommerce.db  main.py  pyproject.toml
.claude/: mcp.json
agent_memory/: demo_user_memory.json  demo_user_memory.json.backup
documents/: employment_contract.txt  product_requirements.txt  research_paper.txt
